# learn_cmake

./: .gitignore
a/: ha.h
a_src/: ha.cpp
b/: CMakeLists.txt  test.cpp
